--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             <li>Empatia</li>
             <li>Autoconhecimento</li>
         </ol>
+        <br>
+        <h3>Lições que desejo aprender</h3>
+        <ul id="licoes_a_aprender">
+            <li>React</li>
+            <li>CSS avançado</li>
+            <li>Front-end</li>
+            <li>Back-end</li>
+            <li>MongoDB</li>
+            <li>SQL</li>
+            <li>Interação do cliente com servidor</li>
+            <li>Algoritmos avançados</li>
+            <li>Orientação à objetos</li>
+            <li>Python</li>
+        </ul>
     </main>
 </body>
 </html>
