--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned [Projeto]</h1>
     </header>
+    <img id="minha_foto" src="myPhoto.jpeg" alt="Minha foto">
   </body>
 </html>
