--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             </ul>
         </section>
     </main>
+
+    <footer id="rodape">
+        <p>Desenvolvido por Juliane Cardoso, Todos os Direitos Reservados.</p>
+    </footer>
     
   </body>
 </html>
