--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned - Trybe</h1>
     </header>
+    <main>
+        <article>
+            <img id="minha_foto" src="./perfil.jpeg" alt="Minha foto">
+        </article>
+    </main>
 </body>
 </html>
