--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <img id="minha_foto" src="./imagem_projeto.jpeg" alt="Foto Minha (Jeff Thierch)">
 
       <!-- <a href="https://www.betrybe.com/">Trybe</a> -->
-
+      
       <section>
         <h2>Ate o momento nos ja aprendemos .</h2>
         <ol id="licoes_aprendidas">
@@ -59,6 +59,14 @@
         </ul>
 
       </section>
+
+      <article>
+        <h2>Um breve resumo sobre meu aprendizado</h2>
+        <p>
+          Tudo comecou dia 09/08/2021, apenas 2 dias apos meu aniversario, no inicio estava com medo de nao ser capaz de aprender tudo oque deveria aprender, nao havia tido muito sucesso outras vezes que tentei aprender a programar. 
+          As aulas sao tao bem montadas e explicadas que nao tive dificuldade nenhuma em aprender, parece que tudo entrou na minha cabeca muito facilmente, hoje ja estou conseguindo dar meus primeiros passos na criacao das minhas paginas, isso tudo sozinho, coisa que pensei que seria impossivel em tao pouco tempo. 
+        </p>
+      </article>
 
     </section>
   </main>
