--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header id="cabecalho">
+        <h1 id="titulo">Primeiro Projeto Trybe</h1>
+    </header>
     
 </body>
 </html>
