--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <li>SQL</li>
         </ul>
     </section>
+    <footer id="rodape">
+        <p>Essa página foi criada com a intenção de praticar o que estou aprendendo enquanto um <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer">Tryber</a>.</p>
+    </footer>
 
 </body>
 </html>
