adding ids: cabecalho, titulo, minha_foto, licoes_aprendidas, licoes_a_aprender, rodape

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     
-    <header>
+    <header id="cabecalho">
         <div>
-            <div>
-                <img src="#" alt="home icon">
-            </div>
+            <section>
+                <h1 id="titulo">Me</h1>
+                <img src="./coffee.svg" alt="home icon">
+            </section>
 
-            <div>
+            <section>
                 <nav>
                     <ul>
                         <li>About me</li>
@@ -23,7 +24,7 @@
                         <li>Contact</li>
                     </ul>
                 </nav>
-            </div>
+            </section>
         </div>
     </header>
 
@@ -31,7 +32,7 @@
         <article>
             <section>
                 <div>
-                    <h1>Gabriel Silvestre</h1>
+                    <h2>Gabriel Silvestre</h2>
                 </div>
                 <div>
                     <ul>
@@ -47,22 +48,44 @@
             </section>
 
             <section>
-                <img src="#" alt="profile picture of Gabriel Silvestre">
+                <img id="minha_foto" src="./profile_picture.jpeg" alt="profile picture of Gabriel Silvestre">
             </section>
         </article>
 
         <article>
             <div>
-                <h2>Skills</h2>
+                <h3>Skills</h3>
             </div>
 
             <section>
-                <!-- Lista skills 1 -->
+                <ol id="licoes_aprendidas">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
             </section>
 
             <section>
-                <h3>Soft-skills</h3>
-                <!-- Lista skills 2 -->
+                <h4>Not-Learned</h4>
+                <ul id="licoes_a_aprender">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </section>
         </article>
 
@@ -73,7 +96,7 @@
         </aside>
     </main>
 
-    <footer>
+    <footer id="rodape">
         <div>
             <nav>
                 <ul>
