--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
         <li>HTML Semântico</li>
         <li>Requisições Web</li>
       </ol>
+
+      <ul id="licoes_a_aprender">
+        <li>Javascript</li>
+        <li>NodeJS</li>
+        <li>React</li>
+        <li>Python</li>
+        <li>Soft-skills</li>
+        <li>Metodologias Ágeis</li>
+        <li>Redux</li>
+        <li>SQL</li>
+        <li>MongoDB</li>
+        <li>Estruturas de Dados</li>
+      </ul>
     </section>
   </main>
 </body>
