--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
         <li>JavaScript ES6</li>
       </ul>
     </div>
+    <article>
+      <h3>Sobre meu aprendizado</h3>
+      <p>eget gravida cum sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc vel risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas dui id ornare arcu odio ut sem nulla pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar.</p>
+    </article>
+    <aside>
+      <h3>Passagem de meu aprendizado</h3>
+      <p>eget gravida cum sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc vel risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas dui id ornare.</p>
+    </aside>
   </main>
   <footer id="rodape">
     <p>Projeto: <a href="https://github.com/tryber/sd-016-b-project-lessons-learned" target="_blank">Lessons Learned</a>; made by: lucca neiva :D</p>
