--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-  <head id="#cabecalho">
-      <h1 id="titulo">Lessons Learned - Trybe</h1>
-  </head>
+  <header id="cabecalho" class="header">
+          <h1 id="titulo">Lessons Learned - Trybe</h1>
+  </header>
 </body>
 </html>
