--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
 		<li>HTML Semântico</li>
 		<li>Box Model</li>
 	</ol>
-
+	<ul id="licoes_a_aprender">
+		<li>JavaScript</li>
+		<li>React</li>
+		<li>DOM</li>
+		<li>CSS Responsivo</li>
+		<li>Autoconhecimento</li>
+		<li>Comunicação</li>
+		<li>SQL</li>
+		<li>Node JS</li>
+		<li>Python</li>
+		<li>Algoritmos</li>
+	</ul>
 	
 </body>
 </html> 
