--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <h1 id="titulo">Título</h1>
     </header>
     <img src="me.jpeg" alt="Eu, Natã, com uma blusa azul e uma parede laranja ao fundo" id="minha_foto">
+    <a href="https://linkedin.com/in/nataelienai" target="_blank">Natã Elienai</a>
     <ol id="licoes_aprendidas">
       <li>Unix</li>
       <li>Shell</li>
