--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
       <li>Continuous Integration (CI)</li>
     </ul>
     <a target="_blank" href="israelss.github.io">Visite meu site</a>
+    <article>
+      <header><h2>Minha jornada na Trybe</h2></header>
+      <section>
+        <p>
+          Quando entrei na Trybe não imaginava que aprenderia
+          <strong>tanto</strong> em tão pouco tempo! Não só habilidades técnicas
+          (<em>hard skills</em>), mas também habilidades sócio-emocionais (<em
+            >soft skills</em
+          >) têm sido trabalhadas todos os dias de forma muito bem integrada,
+          levando ao crescimento orgânico como profissional completo!
+        </p>
+      </section>
+    </article>
     <footer id="rodape"></footer>
   </body>
 </html>
