--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
                 <li>HTML semantico</li>
                 <li>Ingles</li>
             </ol>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>Phyton</li>
+                <li>SQL</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>CSS Responsive</li>
+                <li>Controle Emocional</li>
+                <li>Instalar Arch Linux</li>
+                <li>Dados</li>
+                <li>Ingles</li>
+            </ul>
         </article>
     </main>
 </body>
