--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header id="cabecalho">           
+        <header>
+            <section id="cabecalho">
+                <a href="index.html">Home</a>
+            </section>           
                 <h1 id="titulo">Teste</h1>
         </header>
         <main>
@@ -24,6 +27,19 @@
                 <li>CSS Seletores e Posicionamento</li>
                 <li>HTML Semântico</li>
             </ol>
+            <ul id="licoes_a_aprender">
+                <h2>Lições que desejo aprender:</h2>
+                <li>JavaScript</li>
+                <li>DOM (Document Object Model)</li>
+                <li>React</li>
+                <li>Redux</li>
+                <li>API's</li>
+                <li>SQL</li>
+                <li>Banco de Dados</li>
+                <li>MongoDB</li>
+                <li>NodeJS</li>
+                <li>Phyton</li>
+            </ul>
         </main>
         <footer>
         </footer>
