--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     </header>
 
     <main>
-        <img src="foto-juliane.jpg" alt="Foto de Juliane Cardoso" id="minha_foto">  
+        <img src="foto-juliane.jpg" alt="Foto de Juliane Cardoso" id="minha_foto">
+        <div>
+            <a href="https://github.com/julianesilvac75" target="_blank">GitHub</a> | 
+            <a href="https://www.linkedin.com/in/juliane-cardoso-silva/" target="_blank">LinkedIn</a>
+        </div>
         
         <section>
             <h2>Coisas valiosas que a Trybe me ensinou até agora:</h2>
