--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
     Durante as aulas na Trybe, aprendemos diversos assuntos de forma progressiva
     e consciente. Dessa forma todos podem acompanhar o curso, mesmo com experiências diversas. A comunidade criada é impressionante, onde muitas pessoas estão dispostas a ajudar, dessa forma se transforma em uma evolução orgânica, onde os próprios integrantes da comunidade se ajudam e crescem juntos. Estou ansioso para novos aprendizados.
 </article>
+<section>
+    <aside class="article2">
+        Ao aprender as propriedades de display do CSS, fiquei-me perguntando porque existem tantas formas diferentes. Depois de refletir, cheguei a conclusão, que  o programa evolui, dando mais liberdade ao criador. Ou seja, quanto mais possibilidades, menos amarras temos para criar. 
+    </aside>
+</section>
 
 <a href="https://www.betrybe.com/" target="_blank">TRYBE</a>
 
