--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <main>
     <img id="minha_foto" src="https://ca.slack-edge.com/TMDDFEPFU-U02AFHVADQT-074f7bc1a8bc-192" alt="Minha foto pessoal">
-    <section>
+    <a href="https://github.com/tinho1123" target="_blank">Meu GitHub</a>
       <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
@@ -40,8 +40,24 @@
           <li>Node</li>
           <li>SQL</li>
         </ul>
-      
-    </section>
+
+    <article>
+      <p>
+        Meu aprendizado aqui na Trybe é sensacional, minha primeira aula onde era sobre Unix
+        eu aprendi tudo que podia sobre, oque era Onix, Kernel, e os aplicativos como conversava
+        com o Kernel para pegar informações dos componentes do computador.
+
+        Aprendi sobre o Git e seu versionamento de código, utilizo ele frequentemente na minha instituição.
+        e ele serve como base para quando começar a trabalhar, onde será usado frequentemente.
+
+        Não podemos esquecer do GitHub, onde é um site muito utilizado entre os desenvolvedores.
+        Aprendi o suficiente sobre Soft Skills, e vi vários pontos a trabalhar sobre mim onde eu preciso
+        para o mercado de trabalho.
+
+        Atualmente estou aprendendo sobre HTML, CSS, e JavaScript mas pelo menos consigo criar um site do zero
+        mas como uma coisa básica sem muita complexibilidade, mas estou na luta para crescer e voar aqui na Trybe #VQV!
+      </p>
+    </article>
   </main>
 
   <footer id="rodape">
