--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 <li>Phyton</li>
             </ul>
         </main>
-        <footer>
+        <footer id="rodape">
+            <p>Rodapé</p>
         </footer>
     </body>
 </html>
