--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <header id="cabecalho" class="header">
           <h1 id="titulo">Lessons Learned - Trybe</h1>
   </header>
+  <div>
+      <img id="minha_foto" class="minha_foto" src="foto.jpg" alt="foto de perfil">
+  </div>
 </body>
 </html>
