--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <main>
     <figure><img id="minha_foto" src="me.jpg" alt="Foto de rapaz sorrindo"></figure>
+    <a target="_blank" href="https://samuel5g.github.io">Confira meu portfolio</a>
 
     <section>
       <ol id="licoes_aprendidas">
@@ -43,5 +44,9 @@
       </ul>
     </section>
   </main>
+
+  <footer id="rodape">
+
+  </footer>
 </body>
 </html>
