--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
         </p>
       </section>
     </article>
+    <aside>
+      <h2>Fun fact!</h2>
+      <p>
+        Mesmo já possuindo algum conhecimento em programação, estou aprendendo
+        algo novo a cada dia. Como o comando <kbd>apropos</kbd>
+      </p>
+    </aside>
     <footer id="rodape"></footer>
   </body>
 </html>
