--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
         <li>Zoom</li>
         <li>Inspect</li>
         <li>Semantic HTML</li>
+     <h2>Lições à aprender</h2>   
     </ol>
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsive</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Testes</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+    </ul>
 </body>
 </html>
