--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
 			<li>HTML & CSS-Seletores e posicionamento.</li>
 			<li>HTML Semântico.</li>
 		</ol>
+		<ul id="licoes_a_aprender">
+			<li>JavaScript.</li>
+			<li>Lógica de Progamação.</li>
+			<li>JavaScript: DOM, Eventos e Web Storage.</li>
+			<li>HTML & CSS: Forms, Flexbox e Responsivo.</li>
+			<li>JavaScript Es6 e Testes Unitários.</li>
+			<li>Higher Order Functions do JavaScript ES6.</li>
+			<li>JavaScript Assícrono e Promises.</li>
+			<li>Testes automatizados com Jest.</li>
+			<li>Desenvolvimento Front-end.</li>
+			<li>Desenvolvimento Back-end.</li>
+		</ul>
 	</main>
     
 </body>
