--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
         </p>
       </article>
 
+      <section>
+        <aside>
+          <p>Comecamos por Fundamentos do Desenvolvimento,fomos para Unix & Bash aprendemos os comandos do bash e sobre o unix, aprendemos git, seus comandos e github, como a internet funciona e fomos para HTML e CSS, onde estamos aprendendo a estrutura do HTML e as propriedades do CSS</p>
+        </aside>
+      </section>
+
     </section>
   </main>
   <footer id="rodape"></footer>
