--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
                 <li> JS </li>
                 <li> INTERNET </li>
             </ol>
+            <ul id="licoes_a_aprender">
+                <li> lorem ipsum </li>
+                <li> lorem ipsum </li>
+                <li> lorem ipsum  </li>
+                <li> lorem ipsum  </li>
+                <li> lorem ipsum  </li>
+                <li> lorem ipsum  </li>
+                <li> lorem ipsum  </li>
+                <li> lorem ipsum  </li>
+                <li> lorem ipsum  </li>
+                <li> lorem ipsum  </li>
+            </ul>
         </div>
+        <footer id="rodape">
+          <a href="https://www.chess.com/member/windowstuck" target="_blank"> perfil no chess.com do pai vamo tirar x1 </a>
+        </footer>
     </body>
   </html>
