--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     </header>
   </div> 
   <div>
-      <main>
-          <img id="minha_foto" scr="/sd-016-b-project-lessons-learned"
-      </main>
+          <img id="minha_foto" scr="minha_foto.jpeg">
   </div>    
     </body>
 </html>
