--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <header id="cabecalho">
       <h1 id="titulo">Primeiro Projeto: Lessons learned!</h1>
     </header>
+    <main>
+      <img id="minha_foto" alt="Gabriel de casaco amarelo" src="foto.jpeg">
+    </main>
   </body>
 </html>
