--- a/index.html
+++ b/index.html
@@ -44,5 +44,9 @@
             </ul>
         </section>
     </main>
+    <footer id="rodape">
+        <hr>
+        <p>Todos Os Direitos Reservados, Felipe Sanches Meirelles</p>
+    </footer>
 </body>
 </html>
