finalizando as partes 4, 5, 6, 8, 9

--- a/index.html
+++ b/index.html
@@ -1,20 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Lessons Learned</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project Lessons Learned</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div class="head">
-      <header id="cabecalho">
-        <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
-      </header>
-  </div>  
+    <header id="cabecalho">
+      <h1 id="titulo">Lições Aprendidas - Trybe!</h1>
+    </header>
+  </div>
+  
+  <div>
     <main>
       <img id="minha_foto" src="minha_foto.jpeg" alt="Foto dr Mychael sorrindo">
+    <div>
+      <ol id="licoes_aprendidas">
+        <h2>Lições Aprendidas</h2>
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Empatia</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Inspect</li>
+        <li>Semantic HTML</li>
+      </ol>
+    </div>  
+    <div>
+      <ul id="licoes_a_aprender">
+        <h2>Lições que aprenderei em breve</h2>
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsive</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+      </ul>
+    </div>
+    <article class="artigo">
+      <h2>Sobre meu aprendizado</h2>
+      <p>Considerando que temos bons administradores de rede, a implementação do código afeta positivamente o correto provisionamento da terceirização dos serviços. A implantação, na prática, prova que o entendimento dos fluxos de processamento cumpre um papel essencial na implantação dos índices pretendidos. No nível organizacional, a lógica proposicional exige o upgrade e a atualização do sistema de monitoramento corporativo.</p>
+    </article>
+    <aside class="aside">
+      <h2>Pasagem sobre meu aprendizado</h2>
+      <p>O cuidado em identificar pontos críticos na criticidade dos dados em questão auxilia no aumento da segurança e/ou na mitigação dos problemas do impacto de uma parada total.</p>
+    </aside>
     </main>
+    <footer id="rodape">
+      <p>Desenvolvido por Mychael Jales, 2021.</p>
+    </footer>
+  </div>  
 </body>
 </html>
