--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Empatia</li>
             <li>Autoconhecimento</li>
         </ol>
-        <br>
+        
         <h3>Lições que desejo aprender</h3>
         <ul id="licoes_a_aprender">
             <li>React</li>
@@ -39,6 +39,8 @@
             <li>Python</li>
         </ul>
     </main>
+    <footer id="rodape"><b><a href="https://www.github.com/leboralli" 
+        id="link-externo">Github</a> </b></footer>
 </body>
 </html>
 
