--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <header>
             <section id="cabecalho">
                 <a href="index.html">Home</a>
+                <a href="https://www.linkedin.com/in/victorschlichting/" target="_blank">Contato</a>
             </section>           
-                <h1 id="titulo">Teste</h1>
+                <h1 id="titulo">Project Lessons Learned - Victor Hugo Baum Schlichting</h1>
         </header>
         <main>
             <img id="minha_foto" src="imagens/perfil.jpeg" alt="foto-victor-schlichting">
