adiciona cabecalho e foto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   </head>
 
   <body>
+    
+    <header id="cabecalho">
+      <h1 id="titulo"></h1>
+    </header>
+
+    <img src="rsz_fotoeu.jpg" alt="foto de Alissandra Lima sorrindo" id="minha_foto"> 
 
   </body>
 
