--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
                 <h1>Título</h1>
             </section>
         </header>
+        <img class="minha_foto" src="imagens/2e4c2e62-e377-44df-beda-2905a329f83b.jpeg" width="200">
     </body>
 </html>
