--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
     <main>
         <article>
             <img id="minha_foto" src="./perfil.jpeg" alt="Minha foto">
+            <section>
+                <h3>Lições</h3>
+                <ol id="licoes_aprendidas">
+                    <li>Unix</li>
+                    <li>Git</li>
+                    <li>Github</li>
+                    <li>Empatia</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Slack</li>
+                    <li>Zoom</li>
+                    <li>Inspect</li>
+                    <li>Semantic HTML</li>
+                </ol>
+            </section>
         </article>
     </main>
 </body>
