--- a/index.html
+++ b/index.html
@@ -14,19 +14,34 @@
   <div class="container">
     <img src="foto.jpg" alt="uma foto minha" id="minha_foto">
 
-    <p>Lições Aprendidas</p>
-    <ol id="licoes_aprendidas">
-      <li>Unix & Bash</li>
-      <li>Git</li>
-      <li>Github</li>
-      <li>Internet</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Estruturas de Página</li>
-      <li>Seletores</li>
-      <li>Posicionamento</li>
-      <li>Semantic HTML</li>
-    </ol>
+    <h3>Lições</h3>
+    <div class="lists">
+      <ol id="licoes_aprendidas">
+        <li>Unix & Bash</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>Internet</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Estruturas de Página</li>
+        <li>Seletores</li>
+        <li>Posicionamento</li>
+        <li>Semantic HTML</li>
+      </ol>
+      
+      <ul id="licoes_a_aprender">
+        <li>Javascript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS Responsivo</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+      </ul>      
+    </div>
   </div>
 </body>
 </html>
