--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             </ul>
         </section>
     </main>
+    <a href="https://www.linkedin.com/in/felipesanchesm/" target="_blank">Meu Linkedin</a>
     <footer id="rodape">
         <hr>
         <p>Todos Os Direitos Reservados, Felipe Sanches Meirelles</p>
