--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div>
     <img id="minha_foto" src="Minhafoto.jpg" alt="Foto De Rafael Santos">
     </div>
-    <ul id="licoes_aprendidas">
+    <div>
+    <h2>Lições</h2>
+    <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
         <li>GitHub</li>
@@ -24,6 +26,21 @@
         <li>Zoom</li>
         <li>HTML Semântico</li>
         <li>VSCode</li>
+    </ol>
+    </div>
+    <div>
+    <ul>
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Web Storage</li>
+        <li>Forms</li>
+        <li>FlexBox</li>
+        <li>ES6</li>
+        <li>React</li>
+        <li>Redux</li>
+        <li>Context API</li>
+        <li>SQL</li>
     </ul>
+    </div>
 </body>
 </html>
