--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
     
   </main>
 
+  <aside>
+    <section>
+      Estudei horas depois das aulas para poder aprender o que eu tenho hoje, mesmo antes ja sabendo a criar um site
+      eu ainda não aprendi o suficiente, e aqui estou aprendendo sempre coisas novas e ansioso para o que está por vir
+      lutei para estar aqui.
+    </section>
+  </aside>
+
   <footer id="rodape">
 
   </footer>
