--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     <li>Node</li>
     <li>SQL</li>
 </ul>
+<article>
+    <p>I'm on a new journey here at Trybe, every day I face new challenges and new achievements. It's been a unique learning experience, not only about the Hard Skills that I'm developing, but also about my self-knowledge with Soft Skills.I am more motivated every day, with each new class, new lectures and new projects.So let's go Trybe!</p>
+</article>
 <aside><a href="https://github.com/MilleneGalettiAcosta" target="_blank">Meu Github</a></aside>
-<footer id="rodape">rodapé</footer>
+<footer id="rodape">Todos os direitos reservados,Millene Galetti</footer>
 </body>
 </html>
