--- a/index.html
+++ b/index.html
@@ -38,4 +38,9 @@
     <li>Aplicação Front-end</li>
     <li>Aplicação Back-end</li>
   </ul>
+  <!--6. Adicione um rodapé para a página-->
+  <footer id=rodape>
+    <p>Conteúdo compilado por Gabriel Felippe, 2021.</p>
+  </footer>
+
 </body>
