--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    <header id="cabecalho">
-        <h1 id="titulo">Projeto: Lessons Learned | Trybe</h1>
-    </header>
-</body>
+  </head>
+  <body>
+    <div id="cabecalho">
+      <h1 id="titulo">Projeto: Lessons Learned | Trybe</h1>
+    </div>
+    <main>
+      <img id="minha_foto" src="gilson.png" alt="foto de Gilson" />
+    </main>
+  </body>
 </html>
