--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <li>Técnicas para aumentar o engajamento da página</li>
     <li>Trabalhar o design dos sites de forma ficar mais agradável</li>
     <li>Formas eficientes de resolver "bugs" no site</li>
-    <li>Entender que outras aplicações são importantes também ter conhecimento ao fazer uma página, por exemplo, programas de edição de imagem</li>
+    <li>Entender que outras aplicações são importantes também ter conhecimento ao fazer uma página, por exemplo,
+      programas de edição de imagem</li>
     <li>Aplicação Front-end</li>
     <li>Aplicação Back-end</li>
   </ul>
@@ -42,5 +43,7 @@
   <footer id=rodape>
     <p>Conteúdo compilado por Gabriel Felippe, 2021.</p>
   </footer>
+  <!--7. Insira pelo menos um link externo na página-->
+  <a href="https://github.com/GabrielFMPinheiro" target="_blank">GitHub</a>
 
 </body>
