--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     </div>
     <main>
       <div>
-          <img id="minha_foto" src="https://scontent.fcpv20-1.fna.fbcdn.net/v/t1.18169-9/13417402_1747824612095920_2590072420852211395_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=174925&_nc_eui2=AeFgcHcpQjiKIsw6e-3EY6i_cpbgw3WusNlyluDDda6w2ci6DqM8LLHK2yJNjgGL3PxjCqh2cYWzFtsad6jvcBHC&_nc_ohc=b9irE6YDKg0AX-Vg4K0&tn=x23hazxhTZY31b8O&_nc_ht=scontent.fcpv20-1.fna&oh=512b19d0369c42dc14527a93e63f8ee1&oe=6149F2B0" alt="Foto_do_Perfil">
-          <a href="linkedin.com/in/matheus-gomes-189203a3" target="_blank">Meu Linkedin</a>
+          <nav>
+              <img id="minha_foto" src="https://scontent.fcpv20-1.fna.fbcdn.net/v/t1.18169-9/13417402_1747824612095920_2590072420852211395_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=174925&_nc_eui2=AeFgcHcpQjiKIsw6e-3EY6i_cpbgw3WusNlyluDDda6w2ci6DqM8LLHK2yJNjgGL3PxjCqh2cYWzFtsad6jvcBHC&_nc_ohc=b9irE6YDKg0AX-Vg4K0&tn=x23hazxhTZY31b8O&_nc_ht=scontent.fcpv20-1.fna&oh=512b19d0369c42dc14527a93e63f8ee1&oe=6149F2B0" alt="Foto_do_Perfil">
+              <a href="linkedin.com/in/matheus-gomes-189203a3" target="_blank">Meu Linkedin</a>
+          </nav>
       </div>
       <div>
           <section>
@@ -48,9 +50,19 @@
                   </ul>
               </div>
           </section>
+        </div>
+          <section>
+              <article>
+                  <p>A Tribe Tem me proporcionadoA Trybe Tem me proporcionado um aprendizado rápido e técnico sobre programação, e vejo que todo o aprendizado exige um esforço enorme da minha parte, visto que eles utilizam o método de ensino que nos fornece a um melhor aprendizado, com isso posso dizer que estou me dedicando muito para conseguir aprender e acompanhar o ritmo da Trybe.</p>
+              </article>
+              <aside>
+                  <p>Bem meu aprendizado tem sido bastante puxado, visto que durmo apenas de 5 a 6 horas por dia, e tenho buscado nas horas vagas do trabalho estudar mais sobre o assunto, e buscado tirar duvidas em sites e blogs, e quando preciso na mentoria.</p>
+              </aside>
+          </section>
+        <div>
           <footer id="rodape">
           </footer>
-      </div>
+        </div>
     </main>
 </body>
 </html>
