--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
             <li>Orientação à objetos</li>
             <li>Python</li>
         </ul>
+        <article>
+            <p>O curso na <b>Trybe</b> tem se mostrado a melhor escolha que eu fiz nos 
+                ultimos tempos. Os professores são ótimos, a didática perfeita e é dado ao
+                aluno a oportunidade de realmente aprender com os melhores.</p>
+            <p>Além disso, o curso também conta com um suporte sempre ativo, com mentores
+                sempre dispostos a ajudar e um ambiente muito pacífico, onde o aluno é estimulado
+                a sempre questionar e nunca ter medo de perguntar se algo causou dúvida.
+            </p>              
+        </article>
     </main>
     <footer id="rodape"><b><a href="https://www.github.com/leboralli" 
         id="link-externo">Github</a> </b></footer>
