3 primeiros requisitos concluidos

--- a/index.html
+++ b/index.html
@@ -8,17 +8,36 @@
     <title>Bruno Marques * Project 01</title>
 </head>
 <body>
-    <div class="cabecalho">
+  <div class="content">
+    <div id="cabecalho">
       <h1 id="titulo">Bruno Marques - Lessons Learned</h1>
-    </div>
-    <nav id="menu" class="navi">
+      <nav id="menu" class="navi">
         <ul class="listaM listLine">
-            <li>li 01</li>
-            <li>li 02 </li>
-            <li>li 03</li>
-            <li>li 04</li>
+            <li>Home</li>
+            <li>Login</li>
         </ul>
-    </nav>
+      </nav>
+    </div>
+<div class="profphoto">
+  <img id="minha_foto" src="./imgs/profilePhoto.jpg" width="200px">
+</div>
 
+<div class="lists">
+  <ol id="licoes_a_aprender">
+    <li>Unix</li>
+    <li>Git</li>
+    <li>GitHub</li>
+    <li>Slack</li>
+    <li>Zoom+aspirina</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Empatia</li>
+    <li>Semantic Code</li>
+    <li>Logica de programação</li>
+  </ol>
+</div>
+
+
+</div>
 </body>
 </html>
