--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <header id="cabecalho"><h1 id="titulo">Lições aprendidas - Trybe!</h1></header>
     </head>
-    <img id="minha_foto" src="images/I.jpg" alt="foto-calixto">
+    <img id="minha_foto" src="images/I.jpg" alt="foto-calixto"> <br>
+    <a href="https://www.linkedin.com/in/wellington-calixto-b9400332/" target="_blank">Wellington Calixto</a>
     <H2>Lições aprendidas</H2>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
@@ -37,5 +38,6 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
+    <footer id="rodape"></footer>
 </body>
 </html>
