--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
   <header id="cabecalho">
     <h1 id="titulo">[Lucca Neiva] Lessons Learned</h1>
+    <nav>
+      <ul>
+        <li>Foto</li>
+        <li>Lições aprendidas</li>
+        <li>Lições a aprender</li>
+        <li>SObre meu aprendizado</li>
+      </ul>
+    </nav>
   </header>
   <main>
     <img src="./rsz_1rsz_fotominha.jpg" alt="UMa foto minha com fundo vermelho e cabelo preso." id="minha_foto">
@@ -42,12 +50,14 @@
       </ul>
     </div>
     <article>
-      <h3>Sobre meu aprendizado</h3>
-      <p>eget gravida cum sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc vel risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas dui id ornare arcu odio ut sem nulla pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar.</p>
+      <section>
+        <h2>Sobre meu aprendizado</h2>
+        <p>eget gravida cum sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc vel risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas dui id ornare arcu odio ut sem nulla pharetra diam sit amet nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit sed vulputate mi sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar.</p>
+      </section>
     </article>
     <aside>
-      <h3>Passagem de meu aprendizado</h3>
-      <p>eget gravida cum sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc vel risus commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas dui id ornare.</p>
+        <h3>Passagem de meu aprendizado</h3>
+        <p>eget gravida cum sociis natoque penatibus et magnis dis parturient montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc vel risus commodo viverra maecenas accumsan lacus vel facilisis volutpat..</p>
     </aside>
   </main>
   <footer id="rodape">
