--- a/index.html
+++ b/index.html
@@ -14,5 +14,19 @@
   <div>
       <img id="minha_foto" class="minha_foto" src="foto.jpg" alt="foto de perfil">
   </div>
+  <div>
+      <ol id=licoes_aprendidas>
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Slack</li>
+        <li>Zoom</li>
+        <li>Semantic HTML</li>
+        <li>Code review</li>
+        <li>Empatia</li> 
+      </ol>
+  </div>
 </body>
 </html>
