--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
             <li>SQL</li>
         </ul>
     </section>
+    <article>
+        <p>O primeiro assunto que foi abordado no curso de Desenvolvimento Web na <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank" rel="noreferrer">Trybe</a> foi sobre os sistemas baseados em Unix. No primeiro momento senti que nunca iria conseguir entender o conteúdo, mas com o passar do tempo, controlei a ansiedade e compreendi aos poucos que tudo tem um sentido. O que me ajudou bastante foi o momento em que pratiquei as navegações e configurações no terminal do Linux.</p>
+    </article>
     <footer id="rodape">
-        <p>Essa página foi criada com a intenção de praticar o que estou aprendendo enquanto um <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer">Tryber</a>.</p>
+        <p>Página criada com a intenção de praticar o que estou aprendendo enquanto um <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer">Tryber</a>.</p>
     </footer>
 
 </body>
