--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - TRYBE!</h1>
+        <img id="minha_foto" src="fotoperfil/33186865_1963908880320981_5776167367381876736_n.jpg" alt="">
     </header>
 </body>
 </html>
