--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </article>
     </main>
     <footer id="rodape">
-
+        <a href="https://github.com/irbds" target="_blank">Meu GitHub</a>
     </footer>
 </body>
 </html> 
