--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 		<h1 id="titulo">Lições aprendidas - Trybe!</h1>
 	</header>
 
+	<h2>Victor Hugo Bezerra</h2>
 	<img id="minha_foto" src="minha-foto.jpg" alt="Foto pessoal de Victor Hugo">
+	<h2>Redes Sociais:</h2>
+	<ul>
+		<li><a href="https://www.linkedin.com/in/victorhbm/" target="_blank">LinkedIn</a></li>
+		<li><a href="https://github.com/Victorhbm" target="_blank">GitHub</a></li>
+	</ul>
 
 	<ol id="licoes_aprendidas">
 		<li>Unix</li>
@@ -39,6 +45,10 @@
 		<li>Python</li>
 		<li>Algoritmos</li>
 	</ul>
-	
+
+	<footer id="rodape">
+
+	</footer>
+
 </body>
 </html> 
