Ajusta requisito 2 add Requisito 3

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header id="cabecalho">
     <title>
-      <h1>Lições Aprendidas - Trybe</h1>
+      <h1 id="titulo">Lições Aprendidas - Trybe</h1>
     </title>
+    
   </header>
+
+  <main>
+    <img id="minha_foto" src="minha_foto.jpg" alt="Mulher olhando para a frente com um leve sorriso">
+  </main>
 </body>
 </html>
