adição de table e mudanças na fonte

--- a/index.html
+++ b/index.html
@@ -21,31 +21,33 @@
   
   <a href="https://www.linkedin.com/in/arthur1silva1/" target="_blank">New window to my Linkedin page</a>
   
-  <ol id="licoes_aprendidas">
-    <li>Unix</li>
-    <li>Bash</li>
-    <li>Git</li>
-    <li>Github</li>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Seletores</li>
-    <li>Display inline</li>
-    <li>Display block</li>
-    <li>Display inline-block</li>
-  </ol>
 
-  <ul id="licoes_a_aprender">
-    <li>Javascript</li>
-    <li>DOM</li>
-    <li>React</li>
-    <li>Python</li>
-    <li>Node</li>
-    <li>Soft-skills</li>
-    <li>Estrutura de dados</li>
-    <li>SQL</li>
-    <li>MongoDB</li>
-    <li>POO</li>
-  </ul>
+    <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Git</li>
+        <li>Github</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Seletores</li>
+        <li>Display inline</li>
+        <li>Display block</li>
+        <li>Display inline-block</li>
+    </ol>
+
+    <ul id="licoes_a_aprender">
+        <li>Javascript</li>
+        <li>DOM</li>
+        <li>React</li>
+        <li>Python</li>
+        <li>Node</li>
+        <li>Soft-skills</li>
+        <li>Estrutura de dados</li>
+        <li>SQL</li>
+        <li>MongoDB</li>
+        <li>POO</li>
+    </ul>
+
 
   <article>
     <section>
@@ -57,8 +59,44 @@
     </section>
   </article> 
 
+  <table>
+      <thead>
+        
+        <th scope="row"> Blocos</th>
+        <th scope="row"> Status</th>
+    </thead>
+
+    <tbody>
+        <tr>
+            <td>HTML</td>
+            <td>Checked</td>
+        </tr>
+        <tr>
+            <td>CSS</td>
+            <td>Checked</td>
+        </tr>
+        <tr>
+            <td>Git</td>
+            <td>Checked</td>
+        </tr>
+        <tr>
+            <td>Javascript</td>
+            <td>Not Checked</td>
+        </tr>
+        <tr>
+            <td>DOM</td>
+            <td>Not Checked</td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <td>Total</td>
+        <td>3/5</td>
+    </tfoot>
+  </table>
+
   <footer id="rodape">
     <h2>lessons learned - by Arthur Silva</h2>
   </footer>
+  
   </body>
 </html>
