--- a/index.html
+++ b/index.html
@@ -18,14 +18,42 @@
     </nav>
 
 
+    <section>
+        <img id="minha_foto" src="foto.jpg" alt="Foto da programadora.">
+        <h2>Lições aprendidas nos últimos dias</h2>
+        <ol id="licoes_aprendidas">
+            <li>Respeitar o seu tempo de aprendizagem.</li>
+            <li>Aprender a pescar, ou seja, buscar a metodologia ativa de aprendizado.</li>
+            <li>Que sozinhos podemos ir mais rápidos, porém juntos vamos mais longe.</li>
+            <li>Ensinar é muito prazeroso e é a chave so sucesso.</li>
+            <li>Aprender a importância do autoconhecimento para gerenciar sua carreira.</li>
+            <li>Disciplina e foco são aracterísticas que podem ser aprimoradas.</li>
+            <li>Buscar conhecimento contínuo é um caminho sem volta.</li>
+            <li>Pedir ajuda é libertador após se empenhar na busca por respostas, mas mesmo assim não encontrar.</li>
+            <li>Melhorar a capacidade de escrita, especialmente a ecessidade de síntase.</li>
+            <li>Ser grato por cada pequena conquista.</li>
+        </ol>
+
+        <h2>Lções a aprender</h2>
+        <ul id="licoes_a_aprender">
+            <li>Não desistir no primeiro problema.</li>
+            <li>Acreditar que todos são capazes, especialmente você.</li>
+            <li>Aproveitar o tempo de forma sábia</li>
+            <li>Perder a vergonha de expor opiniões e mostrar as minhas vulnerabilidades.</li>
+            <li>Aprender de forma satisfatórias as linguagens propostas.</li>
+            <li>Desenvolver minha inteligência emocional.</li>
+            <li>Viver um dia de cada vez.</li>
+            <li>Agradecer sempre, especialmente quando der errado, mas te ensinar algo.</li>
+            <li>Buscar evoluir sempre e no seu ritmo.</li>
+            <li>Praticar a empatia com as pessoas ao meu redor.</li>
+        </ul>
+    </section>
+
     <article>
 
     </article>
 
 
-    <section>
-
-    </section>
 
 
     <aside>
@@ -33,7 +61,7 @@
     </aside>
 
 
-    <footer>
+    <footer id="rodape">
 
     </footer>
 
