requisitos 6/7 algumas melhorias

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div>
     <img id="minha_foto" src="Minhafoto.jpg" alt="Foto De Rafael Santos">
     </div>
+    <a href="https://oieusouopi.github.io/" target="_blank">afael Santos</a>
     <div>
     <h2>Lições</h2>
     <ol id="licoes_aprendidas">
@@ -29,7 +30,7 @@
     </ol>
     </div>
     <div>
-    <ul>
+    <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>DOM</li>
         <li>Web Storage</li>
@@ -42,5 +43,6 @@
         <li>SQL</li>
     </ul>
     </div>
+    <footer id="rodape"></footer>
 </body>
 </html>
