--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1 id="titulo">
             Titulo
         </h1>
+        <nav>Inicio</nav>
     </header>
     <section>
         <img id="minha_foto" src="imagens/eu-hiago-meme.jpeg" alt="Foto do autor">
