--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <body class="body">
 <div id="cabecalho">
     <h1 id="titulo">Título </h1>
-
 </div>
-
+<img id="minha_foto" src="celso.jpg" alt="Minha foto no trabalho">
 
 
 
