--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <header id="cabecalho" class="header">
         <h1 id="titulo" class="heading">Project 1 - Lessons learned</h1>
     </header>
+    <nav>
+        <a href="#licoes_aprendidas"> Lições Aprendidas</a>
+    </nav>
     <img id="minha_foto" src="/rsz_fundo_transparente.png" alt="Autorretrato de VIctor SHin">
     <div class="listas">
     <ol id="licoes_aprendidas" class="licoes_enumeradas">
@@ -50,7 +53,7 @@
     </aside>
 </section>
 
-<a href="https://www.betrybe.com/" target="_blank">TRYBE</a>
+<a href="https://www.betrybe.com/" target="_blank">TRYBE  (opens in new window)</a>
 
 <footer id="rodape" class="footer">
 Criado por Victor Shin Kamiguchi
