--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                 <li>SQL</li>
             </ul>
         </section>
+        <article>
+            <p>
+                Essas semanas de curso foram recheadas de conteúdos novos, começou devagar com explicações básicas sobre o sistema Unix, sobre o que é a internet, o que seria uma página web, até o momento em que chegou a explicação do Git,GitHub,HTML e CSS, após isso que as coisas começaram a melhorar, pois deu para ver em tempo real o aprendizado ser absorvido.
+            </p>
+        </article>
     </main>
     <a href="https://www.linkedin.com/in/felipesanchesm/" target="_blank">Meu Linkedin</a>
     <footer id="rodape">
