--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
                 <li>Pensamento Crítico</li>
             </ul>
         </section>
+
+        <article>
+            <h2>O difícil - e maravilhoso - caminho para o aprendizado</h2>
+            <p>Eu passei por muitos lugares até chegar onde estou hoje. Algumas pessoas são sortudas e descobrem desde cedo o que amam e o que querem fazer da vida, mas eu, infelizmente (ou felizmente), não fui uma delas. Dei algumas voltas até decidir que gostava tanto de tecnologia a ponto de querer estudar e fazer disso uma profissão.</p> 
+            <p>Se eu me arrependo? Nem um pouco. Todo o conhecimento que eu puder adquirir ainda será pouco comparado ao tamanho da minha vontade de aprender.</p> 
+        </article>
     </main>
 
     <footer id="rodape">
