--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <header id="cabecalho">
         <h1 id="titulo">Meu primeiro projeto na Trybe :)</h1>
     </header>
+
+    <img id="minha_foto" src="/breno-perfil.jpg" alt="Foto de Breno Tainan em frente ao espelho, ele está vestido como uma blusa branca e está segurando um celular.">
 </body>
 </html>
