--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
     </nav>
     <h1 id="titulo">Licoes Aprendidas na Trybe</h1>
   </header>
+
   <main>
     <section>
       <img id="minha_foto" src="./imagem_projeto.jpeg" alt="Foto Minha (Jeff Thierch)">
 
       <!-- <a href="https://www.betrybe.com/">Trybe</a> -->
       
-      <section>
-        <h2>Ate o momento nos ja aprendemos .</h2>
+      <section class="section-hab">
+        <h2 class="sub-title">Ate o momento nos ja aprendemos .</h2>
         <ol id="licoes_aprendidas">
           
           <li>Os Fundamentos do Desenvolvimento Web</li>
@@ -36,14 +37,14 @@
           <li>Oque e o Git e o GitHub</li>
           <li>Comandos do Git (Git add, git commit, branch, checkout, pull e push, dentre outros </li>
           <li>Aprendemos sobre o funcionamento da Internet e como ela se comunica com o Client</li>
-          <li>Estrutura Basica HTML</li>
-          <li>Propriedades basicas do CSS</li>
+          <li>Estrutura Basica HTML e as propriedades basicas do CSS</li>
           <li>HTML Semantico para deixar nossa pagina acessivel e com um bom SEO</li>
           <li>Seletores, e diversas tecnicas de Posicionamento no CSS </li>
           <li>Aprendemos sobre Soft Skills e sua importancia no mercado de trabalho e no nosso desenvolvimento como pessoa</li>
+
         </ol>
 
-        <h2>Lista de Habilidades que ainda desejo aprender</h2>
+        <h2 class="sub-title">Lista de Habilidades que ainda desejo aprender</h2>
 
         <ul id="licoes_a_aprender">
           <li>JavaScript e como deixar nossas paginas interativas com ele</li>
@@ -61,14 +62,14 @@
       </section>
 
       <article>
-        <h2>Um breve resumo sobre meu aprendizado</h2>
+        <h2 class="sub-title">Um breve resumo sobre meu aprendizado</h2>
         <p>
-          Tudo comecou dia 09/08/2021, apenas 2 dias apos meu aniversario, no inicio estava com medo de nao ser capaz de aprender tudo oque deveria aprender, nao havia tido muito sucesso outras vezes que tentei aprender a programar. 
-          As aulas sao tao bem montadas e explicadas que nao tive dificuldade nenhuma em aprender, parece que tudo entrou na minha cabeca muito facilmente, hoje ja estou conseguindo dar meus primeiros passos na criacao das minhas paginas, isso tudo sozinho, coisa que pensei que seria impossivel em tao pouco tempo. 
+          comecei dia 09/08/2021, apenas 2 dias apos meu aniversario, estava com medo de nao ser capaz de aprender tudo oque deveria, nao havia tido muito sucesso outras vezes que tentei aprender a programar. 
+          As aulas sao bem montadas e explicadas, nao tive dificuldade nenhuma em aprender, parece que tudo entrou na minha cabeca muito facilmente, ja estou conseguindo dar meus primeiros passos na criacao das minhas paginas, isso tudo sozinho, coisa que pensei que seria impossivel em tao pouco tempo. 
         </p>
       </article>
 
-      <section>
+      <section class="aside-section"> 
         <aside>
           <p>Comecamos por Fundamentos do Desenvolvimento,fomos para Unix & Bash aprendemos os comandos do bash e sobre o unix, aprendemos git, seus comandos e github, como a internet funciona e fomos para HTML e CSS, onde estamos aprendendo a estrutura do HTML e as propriedades do CSS</p>
         </aside>
