adiciona link externo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,24 @@
       <h1 id="titulo"></h1>
     </header>
 
-    <img src="rsz_fotoeu.jpg" alt="foto de Alissandra Lima sorrindo" id="minha_foto"> 
+    <img src="rsz_fotoeu.jpg" alt="foto de Alissandra Lima sorrindo" id="minha_foto">
+
+    <ol id="licoes_aprendidas">
+        <li>Aprender</li>
+        <li>Perseverar</li>
+        <li>Não desistir</li>
+        <li>Continuar</li>
+        <li>Resistir</li>
+        <li>Saber perguntar</li>
+        <li>Compartilhar</li>
+        <li>Ajudar</li>
+        <li>Revisar</li>
+        <li>Confiar</li>
+    </ol>
+
+    <footer id="rodape"></footer>
+
+    <h2><a href="https://github.com/anaualima" target="_blank">Conheça meu GitHub</a></h2>
 
   </body>
 
