--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
     <title>Lessons Learned SD 16 B</title>
-    <h1 id="titulo">Lessons Learned SD 16 B</h1>
+    <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+    <p><a href="https://www.betrybe.com/">Home</a></p>
+    <p><a href="https://app.betrybe.com/course">Login</a></p>
   </header>
   <body>
     <img id="minha_foto" src="foto_fas.jpg" />
+    <br />
+    <p><a href="https://www.linkedin.com/in/fasouzarj">Flávio Alves</a></p>
+    <nav>
+      <ol id="licoes_aprendidas">
+        <table>
+          <td>
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Git</li>
+            <li>Git Hub</li>
+            <li>Internet</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Autoconhecimento</li>
+            <li>Empatia</li>
+            <li>Profissionalismo</li>
+          </td>
+        </table>
+      </ol>
+    </nav>
   </body>
 </html>
